--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oidc": "^0.1.0",
     "sequelize": "^6.37.5"
   }
 }
