--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^5.0.1",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
     "nodemon": "^3.1.7",
     "otplib": "^12.0.1",
-    "qrcode": "^1.5.4",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
+    "qrcode": "^1.5.4",
     "sequelize": "^6.37.5"
   }
 }
